# banking-regulatory-intelligence-platform

./: .gitignore  5_llama.md  5_pdfplumber.md  README.md  inspect_data.py  pyproject.toml  test.md  test_llama.md
backend/reguaz/database/: chroma.py
backend/reguaz/retrieval/: retriever.py
backend/reguaz/services/embeddings/: base.py  bge_m3.py  e5.py  embedding_factory.py  embedding_reader.py  embedding_writer.py  jina_v3.py  qwen.py
backend/reguaz/services/ingestion/: chunk_reader.py
backend/reguaz/utils/: logger.py
data/chroma/025c5bc8-a209-40bb-afe8-46d5c6e4bf7d/: index_metadata.pickle
data/chroma/84562631-f3e3-4220-af85-b088fc87454d/: index_metadata.pickle
data/chroma/b5b1eda2-cbaa-40c0-a323-23af28d74ebc/: index_metadata.pickle
data/evaluation/: gold_dataset_for_embedding_excel.xlsx
data/processed/chunks/aml_kyc/: 096312ee-c41c-4c1f-9edd-baf5f3187758.jsonl  AML Sanksiya Dəyişiklikləri.jsonl  Cinayət yolu ilə əldə edilmiş əmlakın leqallaşdırılmasına və terrorçuluğun maliyyələşdirilməsinə qarşı mübarizə haqqında.jsonl  Müştəri Uyğunluğu və Risk Qiymətləndirməsi Qaydaları.jsonl  Məcəllə.jsonl  Valyuta tənzimi haqqında.jsonl  ad29955c-5a37-413c-937e-cd1e5988ae62.jsonl  Öhdəlik daşıyan şəxslərin daxili nəzarət proqramının cavab verməli olduğu minimum Tələblər.jsonl  (+1 more)
docs/: folder_structure.md
results/: bge_m3_results.csv  comparison.csv  e5_results.csv
scripts/: chunker.py  export_candidates.py  extract_pdfs.py  run_chroma_ingestion.py  run_embedding_pipeline.py  run_retrieval_evaluation.py  test_chunker.py  test_chunker_v2.py  test_qwen.py
(+363 files in other folders)
