[project]
name = "reguaz"
version = "0.1.0"
description = "RAG system for Azerbaijani banking and financial regulations"
authors = [
    {name = "Shamil Aliyev"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "pdfplumber (>=0.11.10,<0.12.0)",
    "sentence-transformers (>=5.6.0,<6.0.0)",
    "chromadb (>=1.5.9,<2.0.0)",
    "torch (>=2.12.1,<3.0.0)",
    "einops (>=0.8.2,<0.9.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
